Banner, Responsivo e Fontes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 	<title>Projeto 05</title>
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -28,8 +29,15 @@
 </header>
 
 <section class="banner">
-	
-</section>
+	<div class="container">
+		<div class="text-banner">
+			<div class="text-banner-single">Consultoria</div>
+			<div class="text-banner-single">Compra</div>
+			<div class="text-banner-single">Venda</div>
+			<div class="text-banner-single">e-mail@hotmail.com</div>
+		</div><!--text-banner-->
+	</div><!--container-->
+</section><!--banner-->
 
 </body>
 </html>
