Iniciando outras páginas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav class="desktop">
 			<ul>
 				<li><a style="color: #EB2D2D;" href="">Home</li>
-				<li><a href="">Venda</li>
+				<li><a href="venda.html">Venda</li>
 				<li><a href="">Sobre</li>
 				<li><a href="">Contato</li>
 			</ul>
