--- a/venda.html
+++ b/venda.html
@@ -66,32 +66,103 @@
 					<form>
 					<div class="form-venda-wraper">
 						<input type="checkbox" id="item1" />
-						<label for="item1"></label>
+						<label for="item1">
+							<div class="circle"></div>
+						</label><!--item-->
 						<span>Todas as décadas</span>
 					</div><!--form-venda-wraper-->
 
 
 					<div class="form-venda-wraper">
 						<input type="checkbox" id="item2" />
-						<label for="item2"></label>
+						<label for="item2">
+							<div class="circle"></div>
+						</label><!--item-->
 						<span>1960 - 1970</span>
 					</div><!--form-venda-wraper-->
 
 
 					<div class="form-venda-wraper">
-						<input type="checkbox" id="item2" />
-						<label for="item2"></label>
+						<input type="checkbox" id="item3" />
+						<label for="item3">
+							<div class="circle"></div>
+						</label>
 						<span>1971 - 1990</span>
 					</div><!--form-venda-wraper-->
 
 					<div class="form-venda-wraper">
-						<input type="checkbox" id="item2" />
-						<label for="item2"></label>
+						<input type="checkbox" id="item4" />
+						<label for="item4">
+							<div class="circle"></div>
+						</label>
 						<span>1991 - 2000</span>
 					</div><!--form-venda-wraper-->
 					</form>
 				</div><!--search2-->
 		</div><!--sidebar-->
+
+		<div class="vitrine-venda">
+
+
+		<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+
+
+		<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+		</div><!--vitrine-venda-->
+
+		<div class="clear"></div>
 		</div><!--container-->
 	</div><!--content-venda-->
 
