--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
 		<nav class="desktop">
 			<ul>
-				<li><a style="color: #EB2D2D;" href="">Home</li>
+				<li><a style="color: #EB2D2D;" href="index.html">Home</li>
 				<li><a href="venda.html">Venda</li>
-				<li><a href="">Sobre</li>
+				<li><a href="sobre.html">Sobre</li>
 				<li><a href="">Contato</li>
 			</ul>
 		</nav><!--desktop-->
 
 		<nav class="mobile">
 			<ul>
-				<li><a style="color:#EB2D2D;" href="">Home</a></li>
-				<li><a href="">Venda</a></li>
-				<li><a href="">Sobre</a></li>
+				<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
+				<li><a href="venda.html">Venda</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
 				<li><a href="">Contato</a></li>
 			</ul>
 		</nav><!--mobile-->
@@ -153,9 +153,9 @@
 	<div class="container">
 	<nav>
 		<ul>
-			<li><a style="color:#EB2D2D;" href="">Home</a></li>
-			<li><a href="">Venda</a></li>
-			<li><a href="">Sobre</a></li>
+			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav>
