--- a/veiculo-teste.html
+++ b/veiculo-teste.html
@@ -18,16 +18,16 @@
 
 	<nav class="desktop">
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;" href="venda.html">Venda</a></li>
-			<li><a href="">Sobre</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav><!--desktop-->
 
 	<nav class="mobile">
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;" href="venda.html">Venda</a></li>
 			<li><a href="">Sobre</a></li>
 			<li><a href="">Contato</a></li>
@@ -42,27 +42,32 @@
 
 <section class="venda-single">
 
-  <!--
+  
 	<div class="line-titulo">
 		<div class="ln1"></div>
-		<h2>Opala 1997</h2>
-	</div>
-	-->
+		<h2>Veículo para venda</h2>
+	
 
 	<div class="container">
 
 	<div class="info-veiculo">
+		<div class="info-bread"><a href="">HOME</a><span>></span>
+		<a href="">VENDA</a><span>></span>
+		<a href="">VEÍCULO DE TESTE</a></div>
 		<div style="background-image:url('imagens/carro1.jpg');" class="foto-destaque"></div>
-		<div class="nav-galeria">
-			<div class="nav-galeria-wraper">
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			<div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div>
-			</div><!--nav-galeria-wraper-->
-		</div><!--nav-galeria-->
+		<div class="nav-galeria-parent">
+			<div class="arrow-left-nav"></div>
+			<div class="arrow-right-nav"></div>
+			<div class="nav-galeria">
+				<div class="nav-galeria-wraper">
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
+				</div><!--nav-galeria-wraper-->
+			</div><!--nav-galeria-->
+		</div><!--nav-galeria-parent-->
 
 	</div><!--info-->
 
@@ -153,9 +158,9 @@
 	<div class="container">
 	<nav>
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;"  href="venda.html">Venda</a></li>
-			<li><a href="">Sobre</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav>
