--- a/veiculo-teste.html
+++ b/veiculo-teste.html
@@ -21,7 +21,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;" href="venda.html">Venda</a></li>
 			<li><a href="sobre.html">Sobre</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a goto="contato" href="">Contato</a></li>
 		</ul>
 	</nav><!--desktop-->
 
@@ -29,8 +29,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;" href="venda.html">Venda</a></li>
-			<li><a href="">Sobre</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
+			<li><a goto="contato" href="">Contato</a></li>
 		</ul>
 	</nav><!--mobile-->
 
@@ -45,30 +45,30 @@
   
 	<div class="line-titulo">
 		<div class="ln1"></div>
-		<h2>Veículo para venda</h2>
+		<h2>Veículo para Venda</h2>
+	</div>
 	
 
 	<div class="container">
 
 	<div class="info-veiculo">
 		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">VEÍCULO DE TESTE</a></div>
-		<div style="background-image:url('imagens/carro1.jpg');" class="foto-destaque"></div>
+		<div class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
-			<div class="arrow-left-nav"></div>
-			<div class="arrow-right-nav"></div>
-			<div class="nav-galeria">
-				<div class="nav-galeria-wraper">
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div><!--mini-img-wraper-->
-				</div><!--nav-galeria-wraper-->
-			</div><!--nav-galeria-->
-		</div><!--nav-galeria-parent-->
+		<div class="arrow-left-nav"></div>
+		<div class="arrow-right-nav"></div>
+		<div class="nav-galeria">
+			<div class="nav-galeria-wraper">
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro2.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
+			</div><!--nav-galeria-wraper-->
 
+		</div><!--nav-galeria-->
+		</div><!--nav-galeria-parent-->
 	</div><!--info-->
 
 	<div class="descricao-veiculo">
@@ -161,13 +161,14 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a style="color:#EB2D2D;"  href="venda.html">Venda</a></li>
 			<li><a href="sobre.html">Sobre</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a goto="contato" href="">Contato</a></li>
 		</ul>
 	</nav>
 	<p>Todos os direitos reservados</p>
 	<div class="clear"></div>
 	</div><!--container-->
 </footer>
-
+<script src="js/jquery.js"></script>
+<script src="js/functions.js"></script>
 </body>
 </html>
